kubernetes/apps/monitoring/victoria/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
spec:
  ingressClassName: internal
  rules:
    - host: &host vmsingle.kinzoku.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vmsingle-victoria
                port:
                  name: http
  tls:
    - hosts: [*host]
